Smooth UserScrolls shouldn't be aborted by ProgrammaticScrolls.

Currently, when there are new scroll coming in, the previously queued
smooth scrolls are all aborted. However, scrolls with type UserScroll
should have higher priority than ProgrammaticScroll and shouldn't be
aborted by ProgrammaticScrolls.

An example is smooth scroll of "Find" in Android. After user tapping
"Find", the smooth ScrollIntoView of the target is queued. However, the
virtual keyboard also disappears at this moment, causing the viewport to
reset its offset and abort the queued smooth scrolls. In such
circumstances, it is the later ProgrammaticScroll that should be aborted,
not the user's smooth scroll.

This patch adds scroll_type_ in SmoothScrollSequencer to record the
scroll type of the current smooth scroll. FilterNewScroll() can then
decide whether to filter the incoming new scroll or abort the current
smooth scroll depending of the scroll types.

Bug: 913009
Change-Id: I0dc7d04d79ef851aae7482d1812ad12e2a92be1d
Reviewed-on: https://chromium-review.googlesource.com/c/1374466
Commit-Queue: Sandra Sun <sunyunjia@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617148}
Former-commit-id: 6601a08a46718f26ca69dc1ca488c831986500be